--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
 
 		<button id="clear" class="purple-button">Clear All Messages</button>
 	</div>
+<script src="app.js"></script>
 </body>
 </html>
