--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Document</title>
 	<script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-firestore.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div id="container">
@@ -24,6 +24,6 @@
 
 		<button id="clear" class="purple-button">Clear All Messages</button>
 	</div>
-<script src="app.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
